[package]
name = "elrond_wyvern_project_smart_contract-wasm"
version = "1.0.0"
edition = "2021"
publish = false
authors = [ "you",]

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.elrond_wyvern_project_smart_contract]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.30.0"

[dependencies.elrond-wasm-output]
version = "0.30.0"
features = [ "wasm-output-mode",]
